Fix various layout issues in Chrome and IE

--- a/views/project/project-details/screenshots/screenshot-list/screenshot-list.less
+++ b/views/project/project-details/screenshots/screenshot-list/screenshot-list.less
@@ -1,6 +1,6 @@
 div.screenshots-container {
-	max-width: 525px;
 	width: 525px;
+	max-height: 300px;
   margin-right: 25px;
 	overflow: visible;
 	float: right;
